Added links to review from others pages

--- a/templates/myapp/reviews.html
+++ b/templates/myapp/reviews.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'myapp/css/account.css' %}">
+    <link rel="stylesheet" href="{% static 'myapp/css/review.css' %}">
     <title>Отзывы на фильмы - DexterMorgan</title>
 </head>
   <body>
@@ -84,6 +84,7 @@
             </div>
         </div>
     </div>
+
 
     <script>
         const csrfToken = "{{ csrf_token }}";
