--- a/templates/myapp/media.html
+++ b/templates/myapp/media.html
@@ -16,6 +16,7 @@
       <a href="{% url 'index' %}">О себе</a>
       <a href="{% url 'media' %}">Медиа</a>
       <a href="{% url 'contacts' %}">Контакты</a>
+      <a href="{% url 'reviews' %}">Отзывы</a>
       <form method="post" action="{% url 'logout' %}">
         {% csrf_token %}
         <button class="logout-btn">Выйти</button>
