--- a/templates/myapp/reviews.html
+++ b/templates/myapp/reviews.html
@@ -73,6 +73,6 @@
         const currentUsername = "{{ user.username }}";
         const isSuperuser = true;
     </script>
-    <script src="{% static 'myapp/js/reviews.js' %}" type="module"></script>
+    <script src="{% static 'myapp/js/reviews.js' %}" ></script>
 </body>
 </html>
