--- a/templates/myapp/reviews.html
+++ b/templates/myapp/reviews.html
@@ -9,13 +9,17 @@
 </head>
 <body>
     <header class="header">
-        <div class="user-info">
-            <span class="username">{{ user.username }}</span>
-        </div>
-        <form method="post" action="{% url 'logout' %}">
-            {% csrf_token %}
-            <button class="logout-btn">Выйти</button>
-        </form>
+      <div class="user-info">
+        <span class="username">{{user.username}}</span>
+      </div>
+      <a href="{% url 'index' %}">О себе</a>
+      <a href="{% url 'media' %}">Медиа</a>
+      <a href="{% url 'contacts' %}">Контакты</a>
+      <a href="{% url 'reviews' %}">Отзывы</a>
+      <form method="post" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <button class="logout-btn">Выйти</button>
+      </form>
     </header>
 
     <div class="container">
@@ -36,7 +40,7 @@
             <button class="submit-btn" id="apply-btn">Отправить</button>
 
             <div class="review-list" id="firstReviewList">
-                <h3 id="firstReviewListTitle">Все отзывы:</h3>
+                <h3>Все отзывы:</h3>
                 {% for review in all_reviews %}
                 <div class="review-item {% if review.sentiment %}positive{% else %}negative{% endif %}" data-review-id="{{ review.id }}">
                     <div class="review-info">
