--- a/templates/myapp/reviews.html
+++ b/templates/myapp/reviews.html
@@ -69,7 +69,7 @@
     <script>
         const token = "{{ csrf_token }}";
         const reviewsUrl = "{% url 'reviews' %}";
-        const deleteUrl = "{% url 'delete_review' 0 %}".replace('0', '');
+        const deleteUrl = "/reviews/delete";
         const currentUsername = "{{ user.username }}";
         const isSuperuser = true;
     </script>
